--- a/_posts/2023-04-15-hotos23_paper.md
+++ b/_posts/2023-04-15-hotos23_paper.md
@@ -5,10 +5,10 @@ author: cst1
 date: 2023-04-15 11:33:00 +0800
 categories: [Publication]
 tags: [academia]
-pin: true
 math: true
 mermaid: true
 ---
 
-TODO: link to publication and summarize content.
+In february 2023, I cosigned a HotOS paper with the ETHZ System's Group NetOS team.
 
+Link to the publication: <https://dl.acm.org/doi/10.1145/3593856.3595903>.
