Feat: add hotos23 paper full text

--- a/_posts/2023-04-15-hotos23_paper.md
+++ b/_posts/2023-04-15-hotos23_paper.md
@@ -12,3 +12,7 @@ mermaid: true
 In february 2023, I cosigned a HotOS paper with the ETHZ System's Group NetOS team.
 
 Link to the publication: <https://dl.acm.org/doi/10.1145/3593856.3595903>.
+
+## Full-text
+
+{% pdf "/assets/posts/putting\_out\_hotos23.pdf" %}
