--- a/_posts/2023-04-15-hotos23_paper.md
+++ b/_posts/2023-04-15-hotos23_paper.md
@@ -15,4 +15,4 @@ Link to the publication: <https://dl.acm.org/doi/10.1145/3593856.3595903>.
 
 ## Full-text
 
-{% pdf "/assets/posts/putting\_out\_hotos23.pdf" %}
+{% pdf "/assets/posts/putting_out_hotos23.pdf" %}
